# ICP_ramzy

./: AMM_DOCUMENTATION.md  CHANGELOG.md  README.md  deposit-modal-test.html  dfx.json  package-lock.json
.github/workflows/: e2e.yml
scripts/: generate-candid.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: amm_tests.rs  lib.rs
src/frontend/: index.html  package.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: AIConfigurationPanel.tsx  AIInsightButton.tsx  AIInsightModal.tsx  AccountManagement.tsx  AdminProtectedRoute.tsx  DepositModal.tsx  SetupAdmin.tsx  Toast.tsx  WalletButton.tsx  WalletConnectModal.tsx  index.ts
src/frontend/src/hooks/: useAdminStatus.ts  useToast.ts
src/frontend/src/services/: account.ts  adminAuth.ts  ai.ts  backendService.ts  enhancedAI.ts  predictionMarket.ts  rewardsDistribution.ts  wallet.ts
src/frontend/src/views/: AdminView.tsx  CounterView.tsx  LlmPromptView.tsx  MarketDetailView.tsx  MarketListView.tsx  index.ts
src/frontend/tests/: App.test.tsx
src/frontend/tests/services/: ai.test.ts  backendService.test.ts  wallet.test.ts
src/frontend/tests/views/: AdminView.test.tsx  CounterView.test.tsx  LlmPromptView.test.tsx  MarketListView.test.tsx
tests/src/: backend.test.ts
